k8s/overlays/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: swipe-docs-prod
  name: swipe-docs
spec:
  template:
    spec:
      containers:
        - name: swipe-docs
          image: "registry.digitalocean.com/team127/swipe-docs:<IMAGE_TAG>"
